--- a/views/auth/reset-password.pug
+++ b/views/auth/reset-password.pug
@@ -12,6 +12,7 @@ block content
     div(class="mt-8 mx-auto max-w-sm")
       div(class="bg-white py-8 px-8 shadow")
         form(class="space-y-5" method='POST' action='/auth/reset-password' novalidate)
+          +csrf
           p Ingresa tu correo electrónico y te enviaremos un enlace para que recuperes el acceso a tu cuenta.
           div
             input(
