--- a/views/_mixins.pug
+++ b/views/_mixins.pug
@@ -3,3 +3,7 @@ mixin error(name)
     each error in locals.error(name)
       span(class="block text-sm text-red-700")
         | #{error}
+
+
+mixin csrf
+  input(type='hidden' name='_token' value=csrfToken())
