--- a/views/auth/signup.pug
+++ b/views/auth/signup.pug
@@ -12,6 +12,7 @@ block content
     div(class="mt-8 mx-auto max-w-sm")
       div(class="bg-white py-8 px-8 shadow")
         form(class="space-y-5" method='POST' action='/auth/signup' novalidate)
+          +csrf
           div
             input(
               class="w-full border border-gray-300 rounded px-3 py-1 outline-none placeholder-gray-500 focus:border-indigo-500"
