--- a/views/properties/create.pug
+++ b/views/properties/create.pug
@@ -15,7 +15,12 @@ block content
   +title(pageTitle)
 
   div(class="bg-white mt-10 mx-auto rounded max-w-4xl p-8 shadow ")
-    form(class="flex flex-col gap-4" method="POST" action="/properties")
+    form(
+        class="flex flex-col gap-4"
+        method="POST"
+        action= `/properties?_token=${csrfToken()}`
+        enctype="multipart/form-data"
+      )
       +csrf
       div
         h3(class="leading-6 text-lg text-gray-900 font-medium") Información general
